--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <span>JavaScript</span>
                 <span>CSS</span>
               </div>
-              <button class="project-btn slide-up" onclick="window.open('#', '_blank')">View Project</button>
+              <button class="project-btn slide-up" onclick="window.open('https://learn-hub-frpx.onrender.com', '_blank')">View Project</button>
             </div>
             <div class="project-card scale-in">
                 <img src="portfolio.png" alt="My Project Screenshot" class="project-img fade-in" />
